--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.5"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
