--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pino": "^8.0.0",
+    "pino-pretty": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
