--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "pino": "^8.0.0",
