--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Aplicacion Todo Rutas",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start": "npx nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "npx nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +15,7 @@
     "dotenv": "^16.0.1",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0"
   },
