--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0"
