--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0"
   },
